rnsc/tests/snapshots/error-parser-class_header-access_flags-mixed_valid_and_invalid.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public native final bridge HelloWorld
.super java/lang/Object
.class_end
----- STDERR -----
[E-015] Error: invalid class access flag 'native'
   ╭─[ test_data/rns_integration/error/parser/class_header/access_flags/mixed_valid_and_invalid.rns:1:15 ]
   │
 1 │ .class public native final bridge HelloWorld
   │               ───┬──  
   │                  ╰──── 'native' is not a valid class access flag
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-015
───╯
[E-015] Error: invalid class access flag 'bridge'
   ╭─[ test_data/rns_integration/error/parser/class_header/access_flags/mixed_valid_and_invalid.rns:1:28 ]
   │
 1 │ .class public native final bridge HelloWorld
   │                            ───┬──  
   │                               ╰──── 'bridge' is not a valid class access flag
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-015
───╯
----- HASH -----
not generated
