rnsc/tests/snapshots/error-parser-class_header-missing_class_name.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class ; class name is missing
.super java/lang/Object
.class_end
----- STDERR -----
[E-020] Error: missing class name after '.class'
   ╭─[ test_data/rns_integration/error/parser/class_header/missing_class_name.rns:1:1 ]
   │
 1 │ .class ; class name is missing
   │ ───┬──│ 
   │    ╰──── the '.class' directive requires a class name as operand
   │       │ 
   │       ╰─ but class name is missing
   │ 
   │ Help: Provide a class name after the '.class' directive, e.g.:
   │       .class <class_name>
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
----- HASH -----
not generated
