rnsc/tests/snapshots/error-parser-class_header-missing_class_name_recovers.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class ; class name is missing

unknown_token ; <- still reported
----- STDERR -----
[E-020] Error: missing class name after '.class'
   ╭─[ test_data/rns_integration/error/parser/class_header/missing_class_name_recovers.rns:1:1 ]
   │
 1 │ .class ; class name is missing
   │ ───┬──│ 
   │    ╰──── the '.class' directive requires a class name as operand
   │       │ 
   │       ╰─ but class name is missing
   │ 
   │ Help: Provide a class name after the '.class' directive, e.g.:
   │       .class <class_name>
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-020
───╯
[E-007] Error: unexpected identifier class body
   ╭─[ test_data/rns_integration/error/parser/class_header/missing_class_name_recovers.rns:3:1 ]
   │
 3 │ unknown_token ; <- still reported
   │ ──────┬──────  
   │       ╰──────── unexpected token
   │ 
   │ Help: Check the syntax of the class body and ensure all tokens are valid.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-007
───╯
----- JAVAP -----
not generated
